@@ -31,6 +31,10 @@ ikiwiki (3.20141017) UNRELEASED; urgency=medium
   * build: in po/Makefile, use the same $(MAKE) as the rest of the build.
     Thanks, ttw
 
+  [ Joey Hess ]
+  * po: If msgmerge falls over on a problem po file, print a warning
+    message, but don't let this problem crash ikiwiki entirely.
+
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Oct 2014 12:04:49 -0400
 
 ikiwiki (3.20141016) unstable; urgency=medium
